AWS - WebScrapping code in EC2 and Migration of nonmatch (0-35 batches) to S3 nonmatch-query bucket

--- a/webscrapping/3. WebScrapping_nonmatch.ipynb
+++ b/webscrapping/3. WebScrapping_nonmatch.ipynb
@@ -86,15 +86,8 @@
     "    if to_df:\n",
     "        return pd.DataFrame(res.fetchall())\n",
     "    else:\n",
-    "        return res.fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return res.fetchall()\n",
+    "\n",
     "def query_insert(qq, con = connection):\n",
     "    try:\n",
     "        res = con.execute(qq)\n",
