--- a/aws/Dev_Song_Download.ipynb
+++ b/aws/Dev_Song_Download.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,32 @@
     "    comando1 = f'youtube-dl -ci -f \"worstaudio\" -x --audio-format mp3 '\n",
     "    path_output = path_audio +  track_id + \".mp3\"\n",
     "    comando2 = f\" --output {path_output}\"\n",
-    "    return comando1 + url + comando2"
+    "    return comando1 + url + comando2\n",
+    "\n",
+    "def file_to_S3(local_path, S3_path,  S3_BUCKET = 'musicemotions'):\n",
+    "    \"\"\"\n",
+    "    local_path = os.path.join(\"..\",\"webscrapping\",\"log\",\"WebScrap.log\")\n",
+    "    S3_path = nonmatch-query/log.txt\n",
+    "    \"\"\"\n",
+    "    if S3_path:\n",
+    "        s3 = boto3.resource('s3')\n",
+    "        resp = s3.Object(S3_BUCKET, S3_path).put(Body=open(local_path, 'rb'))\n",
+    "    else:\n",
+    "        s3 = boto3.resource('s3')\n",
+    "        resp = s3.Object(S3_BUCKET, S3_path).put(Body=open(local_path, 'rb'))\n",
+    "    return resp\n",
+    "\n",
+    "# UPLOADING SONGS\n",
+    "def get_destination_folder_mp3(audio_file):\n",
+    "    return os.path.join(\"fs\",audio_file[2],audio_file[3],audio_file[4], audio_file)\n",
+    "\n",
+    "def upload_audio_minibatch():\n",
+    "    for audio_file in os.listdir(\"data\"):\n",
+    "        audio_local_path = os.path.join(\"data\", audio_file)\n",
+    "        audio_S3_path = get_destination_folder_mp3(audio_file)\n",
+    "        try:\n",
+    "            resp_audio = file_to_S3(audio_local_path, audio_S3_path,  S3_BUCKET = 'musicemotions')\n",
+    "        os.remove(os.path.join(\"data\", audio_file))"
    ]
   },
   {
@@ -314,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/root/.local/share/virtualenvs/Music_Emotions-tI8eYVJu/lib/python3.7/site-packages/ipykernel_launcher.py:2: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/root/.local/share/virtualenvs/Music_Emotions-u30QWrxn/lib/python3.7/site-packages/ipykernel_launcher.py:2: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  \n"
      ]
@@ -329,7 +354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b18214ea7834bc8b1b508ad13f57875",
+       "model_id": "8d6b248219a44f7c96e7b43700069b7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,6 +418,119 @@
     "        # create a log info event indicating that error\n",
     "        print(\"Skip song: \", track_id)\n",
     "        continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Upload audio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TRXVYED128F92F6EAD.mp3',\n",
+       " 'TRXHZUE12903CEF936.mp3',\n",
+       " 'TRYHESR128E079942C.mp3',\n",
+       " 'TRLGIQE12903CD63B4.mp3',\n",
+       " 'TRDDCPL128F4271A9F.mp3',\n",
+       " 'TRVNNZZ12903CB395F.mp3',\n",
+       " 'TRUTIEL128F4268E76.mp3',\n",
+       " 'TRDJMVQ12903CB45AB.mp3',\n",
+       " 'TRFTIIQ12903CDD027.mp3',\n",
+       " 'TRIUSBL128F932E5BC.mp3',\n",
+       " 'TRQQXIO128E078166F.mp3',\n",
+       " 'TRZEBEX12903CE7549.mp3',\n",
+       " 'TRDLBIB128F4226B45.mp3',\n",
+       " 'TRCVSRS128F428D1BE.mp3',\n",
+       " 'TRQHCEZ128F4231723.mp3',\n",
+       " 'TRYZAGM12903CF1F6E.mp3',\n",
+       " 'TRVNEDO12903D06BBA.mp3',\n",
+       " 'TROTOKJ128F933268E.mp3',\n",
+       " 'TRBUAPG128F148B5B8.mp3']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(\"data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fs/F/S/T/TRFSTLZ128F93138A3.mp3'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss = 'TRFSTLZ128F93138A3.mp3'\n",
+    "get_destination_folder_mp3(ss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TRFSTLZ128F93138A3.mp3', 'TRXVYED128F92F6EAD.mp3', 'TRXHZUE12903CEF936.mp3', 'TRYHESR128E079942C.mp3', 'TRLGIQE12903CD63B4.mp3', 'TRDDCPL128F4271A9F.mp3', 'TRVNNZZ12903CB395F.mp3', 'TRUTIEL128F4268E76.mp3', 'TRDJMVQ12903CB45AB.mp3', 'TRFTIIQ12903CDD027.mp3', 'TRIUSBL128F932E5BC.mp3', 'TRQQXIO128E078166F.mp3', 'TRZEBEX12903CE7549.mp3', 'TRDLBIB128F4226B45.mp3', 'TRCVSRS128F428D1BE.mp3', 'TRQHCEZ128F4231723.mp3', 'TRYZAGM12903CF1F6E.mp3', 'TRVNEDO12903D06BBA.mp3', 'TROTOKJ128F933268E.mp3', 'TRBUAPG128F148B5B8.mp3']\n",
+      "data/TRFSTLZ128F93138A3.mp3\n",
+      "fs/F/S/T/TRFSTLZ128F93138A3.mp3\n",
+      "-------------------------\n",
+      "['TRXVYED128F92F6EAD.mp3', 'TRXHZUE12903CEF936.mp3', 'TRYHESR128E079942C.mp3', 'TRLGIQE12903CD63B4.mp3', 'TRDDCPL128F4271A9F.mp3', 'TRVNNZZ12903CB395F.mp3', 'TRUTIEL128F4268E76.mp3', 'TRDJMVQ12903CB45AB.mp3', 'TRFTIIQ12903CDD027.mp3', 'TRIUSBL128F932E5BC.mp3', 'TRQQXIO128E078166F.mp3', 'TRZEBEX12903CE7549.mp3', 'TRDLBIB128F4226B45.mp3', 'TRCVSRS128F428D1BE.mp3', 'TRQHCEZ128F4231723.mp3', 'TRYZAGM12903CF1F6E.mp3', 'TRVNEDO12903D06BBA.mp3', 'TROTOKJ128F933268E.mp3', 'TRBUAPG128F148B5B8.mp3']\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dev"
    ]
   },
   {
@@ -646,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
