--- a/aws/migrate_clean_S3.ipynb
+++ b/aws/migrate_clean_S3.ipynb
@@ -15,9 +15,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "ModuleNotFoundError",
      "evalue": "No module named 'boto3'",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
@@ -46,9 +46,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "C:\\Users\\David\\Anaconda3\\python.EXE\n"
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\David\\Anaconda3\\python.EXE\n"
+     ]
     }
    ],
    "source": [
@@ -913,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
