--- a/aws/test_codes/migrate_clean_S3.ipynb
+++ b/aws/test_codes/migrate_clean_S3.ipynb
@@ -254,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name_file = '0.csv'"
+    "name_file = '1.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -320,33 +320,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>TRAAAZU128F4226F7A</td>\n",
-       "      <td>stop laughing moose</td>\n",
-       "      <td>0</td>\n",
+       "      <td>TRLMHCX128F42AAE0B</td>\n",
+       "      <td>watche the packard ruxpin</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>TRAADHC128F4227F6B</td>\n",
-       "      <td>let them come to berlin the weathermen</td>\n",
-       "      <td>0</td>\n",
+       "      <td>TRLMHUX128F9310E7F</td>\n",
+       "      <td>long way home redstar</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>TRAAFFR128F42719EA</td>\n",
-       "      <td>bokstavelig talt (skit) tungtvann</td>\n",
-       "      <td>0</td>\n",
+       "      <td>TRLMHYE128F42BCA84</td>\n",
+       "      <td>where are you baby? betty boo</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>TRAAFJW128F428A424</td>\n",
-       "      <td>stickin in my eye nofx</td>\n",
-       "      <td>0</td>\n",
+       "      <td>TRLMJGU12903CF56AA</td>\n",
+       "      <td>culture vulture chicks on speed</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>TRAAFXF128F4267A2A</td>\n",
-       "      <td>brother mine eric schwartz</td>\n",
-       "      <td>0</td>\n",
+       "      <td>TRLMKBP12903CEBFCE</td>\n",
+       "      <td>cuachin ghleann neifin joe &amp; antoinette mckenna</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -355,71 +355,71 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20469</th>\n",
-       "      <td>TRZZXHU12903CF4706</td>\n",
-       "      <td>whoa we the kings</td>\n",
-       "      <td>0</td>\n",
+       "      <th>11906</th>\n",
+       "      <td>TRZZZCL128F428BB80</td>\n",
+       "      <td>the ship of pills and needed things i am ghost</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20470</th>\n",
-       "      <td>TRZZXVN128F93285B4</td>\n",
-       "      <td>abschied asp</td>\n",
-       "      <td>0</td>\n",
+       "      <th>11907</th>\n",
+       "      <td>TRZZZCU12903CE6D49</td>\n",
+       "      <td>funny how galliano</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20471</th>\n",
-       "      <td>TRZZYLO12903CAC06C</td>\n",
-       "      <td>i ve never seen the righteous forsaken dallas ...</td>\n",
-       "      <td>0</td>\n",
+       "      <th>11908</th>\n",
+       "      <td>TRZZZED128F930FBBA</td>\n",
+       "      <td>nothings wrong the chelsea smiles</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20472</th>\n",
-       "      <td>TRZZZTZ128F92C5A5F</td>\n",
-       "      <td>for your eyes only (performed by dea li) holly...</td>\n",
-       "      <td>0</td>\n",
+       "      <th>11909</th>\n",
+       "      <td>TRZZZET128F9337FD9</td>\n",
+       "      <td>parade of fools (live at the basement_ 2005) k...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20473</th>\n",
-       "      <td>TRZZZVF12903CE3E28</td>\n",
-       "      <td>wedding ring phantom limbs</td>\n",
-       "      <td>0</td>\n",
+       "      <th>11910</th>\n",
+       "      <td>TRZZZVZ12903CD9485</td>\n",
+       "      <td>nothin  but a fool (from the album west coast ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20474 rows × 3 columns</p>\n",
+       "<p>11911 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                 track_id                                              query  \\\n",
-       "0      TRAAAZU128F4226F7A                                stop laughing moose   \n",
-       "1      TRAADHC128F4227F6B             let them come to berlin the weathermen   \n",
-       "2      TRAAFFR128F42719EA                  bokstavelig talt (skit) tungtvann   \n",
-       "3      TRAAFJW128F428A424                             stickin in my eye nofx   \n",
-       "4      TRAAFXF128F4267A2A                         brother mine eric schwartz   \n",
+       "0      TRLMHCX128F42AAE0B                          watche the packard ruxpin   \n",
+       "1      TRLMHUX128F9310E7F                              long way home redstar   \n",
+       "2      TRLMHYE128F42BCA84                      where are you baby? betty boo   \n",
+       "3      TRLMJGU12903CF56AA                    culture vulture chicks on speed   \n",
+       "4      TRLMKBP12903CEBFCE    cuachin ghleann neifin joe & antoinette mckenna   \n",
        "...                   ...                                                ...   \n",
-       "20469  TRZZXHU12903CF4706                                  whoa we the kings   \n",
-       "20470  TRZZXVN128F93285B4                                       abschied asp   \n",
-       "20471  TRZZYLO12903CAC06C  i ve never seen the righteous forsaken dallas ...   \n",
-       "20472  TRZZZTZ128F92C5A5F  for your eyes only (performed by dea li) holly...   \n",
-       "20473  TRZZZVF12903CE3E28                         wedding ring phantom limbs   \n",
+       "11906  TRZZZCL128F428BB80     the ship of pills and needed things i am ghost   \n",
+       "11907  TRZZZCU12903CE6D49                                 funny how galliano   \n",
+       "11908  TRZZZED128F930FBBA                  nothings wrong the chelsea smiles   \n",
+       "11909  TRZZZET128F9337FD9  parade of fools (live at the basement_ 2005) k...   \n",
+       "11910  TRZZZVZ12903CD9485  nothin  but a fool (from the album west coast ...   \n",
        "\n",
        "       batch_id  \n",
-       "0             0  \n",
-       "1             0  \n",
-       "2             0  \n",
-       "3             0  \n",
-       "4             0  \n",
+       "0             1  \n",
+       "1             1  \n",
+       "2             1  \n",
+       "3             1  \n",
+       "4             1  \n",
        "...         ...  \n",
-       "20469         0  \n",
-       "20470         0  \n",
-       "20471         0  \n",
-       "20472         0  \n",
-       "20473         0  \n",
+       "11906         1  \n",
+       "11907         1  \n",
+       "11908         1  \n",
+       "11909         1  \n",
+       "11910         1  \n",
        "\n",
-       "[20474 rows x 3 columns]"
+       "[11911 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
