Download Queues - Updated

--- a/aws/queue/queue_status_dev.ipynb
+++ b/aws/queue/queue_status_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create SQS client\n",
     "sqs = boto3.client('sqs')\n",
     "queue_url_batch = \"https://sqs.eu-west-1.amazonaws.com/555381533193/get_batch.fifo\"\n",
-    "queue_url_status = \"https://sqs.eu-west-1.amazonaws.com/555381533193/status.fifo\"\n",
+    "#queue_url_status = \"https://sqs.eu-west-1.amazonaws.com/555381533193/status.fifo\"\n",
     "queue_url_stat = \"https://sqs.eu-west-1.amazonaws.com/555381533193/stat\""
    ]
   },
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def send_initial_batchs(batch_num):\n",
+    "def send_initial_batchs(batch_num, iter_ini):\n",
     "    \"\"\"Send message to SQS queue: get_batch.fifo\"\"\"\n",
     "    response = sqs.send_message(\n",
     "        QueueUrl=queue_url_batch,\n",
@@ -85,21 +85,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 36/36 [00:01<00:00, 18.66it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 36/36 [00:02<00:00, 15.57it/s]\n"
      ]
     }
    ],
    "source": [
     "iter_ini = 0\n",
     "for batch_num in tqdm.tqdm(range(0,36)):\n",
-    "    send_initial_batchs(batch_num)"
+    "    if batch_num == 0:\n",
+    "        send_initial_batchs(batch_num, 9558)\n",
+    "    elif batch_num == 1:\n",
+    "        send_initial_batchs(batch_num, 3774)\n",
+    "    else:\n",
+    "        send_initial_batchs(batch_num, iter_ini)"
    ]
   },
   {
@@ -111,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,15 +125,8 @@
     "    sqs_batch, sqs_iter = response[\"Messages\"][0][\"Body\"].split(\":\")\n",
     "    sqs_batch = int(sqs_batch)\n",
     "    sqs_iter = int(sqs_iter)\n",
-    "    return sqs_batch, sqs_iter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return sqs_batch, sqs_iter\n",
+    "\n",
     "def receive_message_sqs_batch_iter():\n",
     "    \"\"\"Receive message from SQS queue: get_batch.fifo\n",
     "    IMPORTANT! VisibilitTImeout: https://github.com/aws/aws-sdk-js/issues/1279\n",
@@ -142,86 +140,112 @@
     "        VisibilityTimeout=10, # important!!! \n",
     "        WaitTimeSeconds=0\n",
     "    )\n",
-    "    return response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return response\n",
+    "\n",
     "def get_id_message(response):\n",
-    "    return response[\"Messages\"][0]['ReceiptHandle']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \"\"\"From the response of SQS, it parses the identifier (receiptHandler) of the message\"\"\"\n",
+    "    return response[\"Messages\"][0]['ReceiptHandle']\n",
+    "\n",
     "def delete_message(id_message):\n",
+    "    \"\"\"Deletes the message, it should be under the visibility timeout interval this command,\n",
+    "    otherwise the message will be re-send to the queue\"\"\"\n",
     "    sqs.delete_message(\n",
     "    QueueUrl=queue_url_batch,\n",
     "    ReceiptHandle=id_message\n",
     "    )\n",
-    "    print(\"Deleted\")\n",
     "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Receive a message\n",
-    "resp = receive_message_sqs_batch_iter()\n",
+    "# # Receive a message\n",
+    "# resp = receive_message_sqs_batch_iter()\n",
     "\n",
-    "# If no message is present in the queue, finish the code\n",
-    "if \"Messages\" not in resp:\n",
-    "    #sys.exit(\"No more messages to process\")\n",
-    "    print(\"No more messages to process\")\n",
-    "else:\n",
-    "    # Parse it to obtain batch and number of iteration\n",
-    "    # Add to the log file which batch num and num iter has received\n",
-    "    batch_num, num_iter = sqs_get_batch_iter_from_message(resp)\n",
+    "# # If no message is present in the queue, finish the code\n",
+    "# if \"Messages\" not in resp:\n",
+    "#     #sys.exit(\"No more messages to process\")\n",
+    "#     print(\"No more messages to process\")\n",
+    "# else:\n",
+    "#     # Parse it to obtain batch and number of iteration\n",
+    "#     # Add to the log file which batch num and num iter has received\n",
+    "#     batch_num, num_iter = sqs_get_batch_iter_from_message(resp)\n",
     "\n",
-    "    #Get the identifier of that message to delete it\n",
-    "    id_message = get_id_message(resp)\n",
+    "#     #Get the identifier of that message to delete it\n",
+    "#     id_message = get_id_message(resp)\n",
     "\n",
-    "    # Delete it\n",
-    "    delete_message(id_message)"
+    "#     # Delete it\n",
+    "#     delete_message(id_message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_message_and_delete():\n",
+    "    # Receive a message\n",
+    "    resp = receive_message_sqs_batch_iter()\n",
+    "\n",
+    "    # If no message is present in the queue, finish the code\n",
+    "    if \"Messages\" not in resp:\n",
+    "        #sys.exit(\"No more messages to process\")\n",
+    "        print(\"No more messages to process\")\n",
+    "    else:\n",
+    "        # Parse it to obtain batch and number of iteration\n",
+    "        # Add to the log file which batch num and num iter has received\n",
+    "        batch_num, num_iter = sqs_get_batch_iter_from_message(resp)\n",
+    "\n",
+    "        #Get the identifier of that message to delete it\n",
+    "        id_message = get_id_message(resp)\n",
+    "\n",
+    "        # Delete it\n",
+    "        delete_message(id_message)\n",
+    "    return batch_num, num_iter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "batch_num, num_iter = read_message_and_delete()\n",
     "batch_num"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -232,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +314,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_now():\n",
+    "    now = datetime.datetime.now()\n",
+    "    dt_string = now.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "    return dt_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_current_instance_id():\n",
     "    try:\n",
     "        desc_inst = subprocess.check_output('ec2-metadata -i', shell = True)\n",
@@ -300,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +387,7 @@
     "    batch_num: batch num that is actually processing (ON) / has processed (OFF) that instance\n",
     "    counter_iteration: ON: iteration starting at / OFF: iteration that has ended\n",
     "    \"\"\"\n",
-    "    date_today = datetime.date.today().strftime(\"%Y-%m-%d\")\n",
+    "    date_today = get_now()\n",
     "    message_body = f'{instance_name}:{status}:{batch_num}:{counter_iteration}:{date_today}'\n",
     "    response = sqs.send_message(\n",
     "        QueueUrl=queue_url_stat,\n",
@@ -363,19 +399,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "instance_name = \"nodo0\";\n",
     "status = \"OFF\"\n",
-    "batch_num = 19\n",
+    "batch_num = 23\n",
     "counter_iteration = 169"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -451,21 +494,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'nodo0:OFF:19:169:2020-04-18',\n",
-       " 'nodo1:OFF:19:169',\n",
-       " 'nodo2:OFF:19:169',\n",
-       " 'nodo3:OFF:19:169',\n",
-       " 'nodo4:OFF:19:169',\n",
-       " 'nodo5:OFF:19:169'}"
+       "{'False:ON:12:0:2020-04-19 14:07:27',\n",
+       " 'node10:ON:2:0:2020-04-18 20:55:29',\n",
+       " 'node10:ON:9:0:2020-04-18 21:15:46',\n",
+       " 'node1:OFF:0:9787:2020-04-18 22:14:11',\n",
+       " 'node1:OFF:11:6:2020-04-19 08:45:51',\n",
+       " 'node1:ON:0:9555:2020-04-18 20:40:49',\n",
+       " 'node1:ON:11:0:2020-04-19 08:44:32',\n",
+       " 'node2:ON:1:3774:2020-04-18 20:44:11',\n",
+       " 'node3:ON:4:0:2020-04-18 21:01:43',\n",
+       " 'node4:ON:3:0:2020-04-18 20:55:45',\n",
+       " 'node5:ON:10:0:2020-04-18 21:20:39',\n",
+       " 'node6:ON:5:0:2020-04-18 21:02:02',\n",
+       " 'node7:ON:6:0:2020-04-18 21:05:01',\n",
+       " 'node8:ON:7:0:2020-04-18 21:05:10',\n",
+       " 'node9:ON:8:0:2020-04-18 21:05:52'}"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
