--- a/aws/migration_db_S3/migrate_clean_S3.ipynb
+++ b/aws/migration_db_S3/migrate_clean_S3.ipynb
@@ -11,21 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'boto3'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-e911898e75b0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mio\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mStringIO\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mboto3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'boto3'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Database\n",
     "import sqlalchemy as db\n",
@@ -42,13 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "C:\\Users\\David\\Anaconda3\\python.EXE\n"
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\David\\.virtualenvs\\project-PFX4TEXB\\Scripts\\python.EXE\n"
+     ]
     }
    ],
    "source": [
@@ -64,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,16 +464,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name_file = '35.csv'"
+    "folder_path = \"match-results\"\n",
+    "name_file = '31.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,16 +490,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfx = load_df_s3(folder_path, name_file)"
+    "for batch_num in range(0,36):\n",
+    "    name_file = f'{batch_num}.csv'\n",
+    "    dfx = load_df_s3(folder_path, name_file)\n",
+    "    # concat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -540,33 +534,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>TRAAXRN128F4214AC9</td>\n",
-       "      <td>https://www.youtube.com/watch?v=QelLZOMnUqY</td>\n",
-       "      <td>35</td>\n",
+       "      <td>TRAATMF128F147921E</td>\n",
+       "      <td>https://www.youtube.com/watch?v=H0ZlWK-b_KY</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>TRABOED12903D0DB16</td>\n",
-       "      <td>https://www.youtube.com/watch?v=Nv2v45D7nyM</td>\n",
-       "      <td>35</td>\n",
+       "      <td>TRACBLO128E0784286</td>\n",
+       "      <td>https://www.youtube.com/watch?v=RsOxgwF9LlM</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>TRADCBW12903CEFFAA</td>\n",
-       "      <td>https://www.youtube.com/watch?v=IiBXhTLbwRo</td>\n",
-       "      <td>35</td>\n",
+       "      <td>TRAGUEL128F92C48CF</td>\n",
+       "      <td>https://www.youtube.com/watch?v=UrE-RTO2CU4</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>TRADDAQ12903CBBEA4</td>\n",
-       "      <td>https://www.youtube.com/watch?v=lN8uDYyNgxY</td>\n",
-       "      <td>35</td>\n",
+       "      <td>TRAINRF128F4278C24</td>\n",
+       "      <td>https://www.youtube.com/watch?v=3Yv-mG6cRbY</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>TRAEHMU128F92FAE6E</td>\n",
-       "      <td>https://www.youtube.com/watch?v=6SSz97zGiyA</td>\n",
-       "      <td>35</td>\n",
+       "      <td>TRAJTHG12903D0196C</td>\n",
+       "      <td>https://www.youtube.com/watch?v=LsKjCKDR2R8</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -575,58 +569,71 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>826</th>\n",
-       "      <td>TRZXBEH128F4239266</td>\n",
-       "      <td>https://www.youtube.com/watch?v=K_GYy7Zfiig</td>\n",
-       "      <td>35</td>\n",
+       "      <th>17906</th>\n",
+       "      <td>TRZYVTC12903CB720C</td>\n",
+       "      <td>https://www.youtube.com/watch?v=sqiJO6IRPW0</td>\n",
+       "      <td>1031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>827</th>\n",
-       "      <td>TRZXNZF128F931EDF3</td>\n",
-       "      <td>https://www.youtube.com/watch?v=q5DnGxNQExE</td>\n",
-       "      <td>35</td>\n",
+       "      <th>17907</th>\n",
+       "      <td>TRZYVZX128F4259FBD</td>\n",
+       "      <td>https://www.youtube.com/watch?v=pjbNLVQ_Iwk</td>\n",
+       "      <td>1031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>828</th>\n",
-       "      <td>TRZZANS128F426808A</td>\n",
-       "      <td>https://www.youtube.com/watch?v=L0zjCMMbnjo</td>\n",
-       "      <td>35</td>\n",
+       "      <th>17908</th>\n",
+       "      <td>TRZYWKG128F9319162</td>\n",
+       "      <td>https://www.youtube.com/watch?v=fD-3pv1XNI4</td>\n",
+       "      <td>1031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>829</th>\n",
-       "      <td>TRZZIGO128F1499EE9</td>\n",
-       "      <td>https://www.youtube.com/watch?v=jVtYa-MnOIY</td>\n",
-       "      <td>35</td>\n",
+       "      <th>17909</th>\n",
+       "      <td>TRZYWUF128F92F0537</td>\n",
+       "      <td>https://www.youtube.com/watch?v=C68xzMjf4v0</td>\n",
+       "      <td>1031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>830</th>\n",
-       "      <td>TRZZQOX12903CB32E2</td>\n",
-       "      <td>https://www.youtube.com/watch?v=mZ6XyCVJQ38</td>\n",
-       "      <td>35</td>\n",
+       "      <th>17910</th>\n",
+       "      <td>TRZYXXC128F9325950</td>\n",
+       "      <td>https://www.youtube.com/watch?v=Z6bAzNsN64M</td>\n",
+       "      <td>1031</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>831 rows × 3 columns</p>\n",
+       "<p>17911 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               track_id                                          url  batch_id\n",
-       "0    TRAAXRN128F4214AC9  https://www.youtube.com/watch?v=QelLZOMnUqY        35\n",
-       "1    TRABOED12903D0DB16  https://www.youtube.com/watch?v=Nv2v45D7nyM        35\n",
-       "2    TRADCBW12903CEFFAA  https://www.youtube.com/watch?v=IiBXhTLbwRo        35\n",
-       "3    TRADDAQ12903CBBEA4  https://www.youtube.com/watch?v=lN8uDYyNgxY        35\n",
-       "4    TRAEHMU128F92FAE6E  https://www.youtube.com/watch?v=6SSz97zGiyA        35\n",
-       "..                  ...                                          ...       ...\n",
-       "826  TRZXBEH128F4239266  https://www.youtube.com/watch?v=K_GYy7Zfiig        35\n",
-       "827  TRZXNZF128F931EDF3  https://www.youtube.com/watch?v=q5DnGxNQExE        35\n",
-       "828  TRZZANS128F426808A  https://www.youtube.com/watch?v=L0zjCMMbnjo        35\n",
-       "829  TRZZIGO128F1499EE9  https://www.youtube.com/watch?v=jVtYa-MnOIY        35\n",
-       "830  TRZZQOX12903CB32E2  https://www.youtube.com/watch?v=mZ6XyCVJQ38        35\n",
+       "                 track_id                                          url  \\\n",
+       "0      TRAATMF128F147921E  https://www.youtube.com/watch?v=H0ZlWK-b_KY   \n",
+       "1      TRACBLO128E0784286  https://www.youtube.com/watch?v=RsOxgwF9LlM   \n",
+       "2      TRAGUEL128F92C48CF  https://www.youtube.com/watch?v=UrE-RTO2CU4   \n",
+       "3      TRAINRF128F4278C24  https://www.youtube.com/watch?v=3Yv-mG6cRbY   \n",
+       "4      TRAJTHG12903D0196C  https://www.youtube.com/watch?v=LsKjCKDR2R8   \n",
+       "...                   ...                                          ...   \n",
+       "17906  TRZYVTC12903CB720C  https://www.youtube.com/watch?v=sqiJO6IRPW0   \n",
+       "17907  TRZYVZX128F4259FBD  https://www.youtube.com/watch?v=pjbNLVQ_Iwk   \n",
+       "17908  TRZYWKG128F9319162  https://www.youtube.com/watch?v=fD-3pv1XNI4   \n",
+       "17909  TRZYWUF128F92F0537  https://www.youtube.com/watch?v=C68xzMjf4v0   \n",
+       "17910  TRZYXXC128F9325950  https://www.youtube.com/watch?v=Z6bAzNsN64M   \n",
        "\n",
-       "[831 rows x 3 columns]"
+       "       batch_id  \n",
+       "0            31  \n",
+       "1            31  \n",
+       "2            31  \n",
+       "3            31  \n",
+       "4            31  \n",
+       "...         ...  \n",
+       "17906      1031  \n",
+       "17907      1031  \n",
+       "17908      1031  \n",
+       "17909      1031  \n",
+       "17910      1031  \n",
+       "\n",
+       "[17911 rows x 3 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
