--- a/lyrics_scrapping/Scrapping_google_lyrics.ipynb
+++ b/lyrics_scrapping/Scrapping_google_lyrics.ipynb
@@ -11,20 +11,157 @@
     "from selenium.webdriver.support.ui import WebDriverWait \n",
     "from selenium.webdriver.support import expected_conditions as EC \n",
     "from selenium.common.exceptions import TimeoutException\n",
-    "\n",
     "import pandas as pd\n",
-    "\n",
-    "browser = webdriver.Chrome()"
+    "import os\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\SaturdaysAI\\\\project\\\\lyrics_scrapping'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "title= [\"Diamonds\", \"If I were a boy\"]\n",
-    "singer= [\"Rihanna\", \"Beyoncé\"]\n",
+    "path= 'D:\\\\SaturdaysAI\\\\project\\\\'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks= pd.read_csv(path+'tracks_S3.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             track_id\n",
+      "0  TRYNEZZ128F4265E59\n",
+      "1  TRTBHNX128F4228728\n",
+      "2  TRYKAUM128F9310193\n",
+      "3  TRRAXOB128F1455956\n",
+      "4  TRRNPYM128F426B336\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tracks.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\marta\\.virtualenvs\\project-gaeps2at\\lib\\site-packages\\ipykernel_launcher.py:2: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "path= 'D:\\\\SaturdaysAI\\\\project\\\\data\\\\MSD\\\\'\n",
+    "unique_tracks= pd.read_csv(path+'unique_tracks.txt', sep='<SEP>', header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_tracks.columns=['track_id', 'other', 'artist', 'title']\n",
+    "del unique_tracks['other']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks= pd.merge(tracks, unique_tracks, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "169995"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tracks=tracks.dropna()\n",
+    "len(tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "singer=tracks['artist']\n",
+    "title= tracks['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser = webdriver.Chrome(executable_path=\"D:\\\\SaturdaysAI\\\\project\\\\chromedriver.exe\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#title= [\"Diamonds\", \"If I were a boy\"]\n",
+    "#singer= [\"Rihanna\", \"Beyoncé\"]\n",
     "\n",
     "all_lyrics=[]\n",
     "all_ids=[]\n",
@@ -36,12 +173,13 @@
     "    lyric = [x.text for x in ids]\n",
     "    lyrics.append(lyric)\n",
     "    all_ids.append(t+'+'+s)\n",
-    "    all_lyrics.append(lyrics)"
+    "    all_lyrics.append(lyrics)\n",
+    "    time.sleep(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,63 +197,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0_x</th>\n",
-       "      <th>0_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>[Shine bright like a diamond\\nShine bright lik...</td>\n",
-       "      <td>Diamonds+Rihanna</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>[Si yo fuera un chico\\nSolo por una vez\\nYo me...</td>\n",
-       "      <td>If I were a boy+Beyoncé</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 0_x                      0_y\n",
-       "0  [Shine bright like a diamond\\nShine bright lik...         Diamonds+Rihanna\n",
-       "1  [Si yo fuera un chico\\nSolo por una vez\\nYo me...  If I were a boy+Beyoncé"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_lyrics.merge(all_ids, left_index=True, right_index=True)"
+    "all_lyrics=all_lyrics.merge(all_ids, left_index=True, right_index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#all_lyrics.to_csv('lyrics_firstattempt.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
