--- a/lyrics_scrapping/Scrapping_google_lyrics.ipynb
+++ b/lyrics_scrapping/Scrapping_google_lyrics.ipynb
@@ -141,8 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "singer=tracks['artist']\n",
-    "title= tracks['title']"
+    "tracks= tracks[6648:]"
    ]
   },
   {
@@ -151,30 +150,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tracks1= tracks[6649:10000]\n",
+    "tracks2= tracks[10000:15000]\n",
+    "tracks3=tracks[15000:20000]\n",
+    "tracks4=tracks[20000:25000]\n",
+    "tracks5= tracks[25000:30000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "browser = webdriver.Chrome(executable_path=\"D:\\\\SaturdaysAI\\\\project\\\\chromedriver.exe\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prueba_borrar' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-ca0ba5a4c5cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mround\u001b[0m\u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mprueba_borrar\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtracks1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtracks2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtracks3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtracks4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtracks5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'tracks1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tracks2'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tracks3'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tracks4'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tracks5'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0msinger\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'artist'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'prueba_borrar' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#title= [\"Diamonds\", \"If I were a boy\"]\n",
-    "#singer= [\"Rihanna\", \"Beyoncé\"]\n",
+    "round= [tracks1, tracks2, tracks3, tracks4, tracks5]\n",
+    "name=['tracks1', 'tracks2', 'tracks3', 'tracks4', 'tracks5']\n",
     "\n",
-    "all_lyrics=[]\n",
-    "all_ids=[]\n",
+    "for i,j in zip(round,name):\n",
+    "    singer=i['artist']\n",
+    "    title= i['title']\n",
+    "    \n",
+    "    all_lyrics=[]\n",
+    "    all_ids=[]\n",
     "\n",
-    "for t, s in zip(title, singer):\n",
-    "    lyrics=[]\n",
-    "    browser.get(f\"https://www.google.com/search?q={t}+{s}+lyrics&sourceid=chrome&ie=UTF-8\")\n",
-    "    ids = browser.find_elements_by_class_name(\"i4J0ge\")\n",
-    "    lyric = [x.text for x in ids]\n",
-    "    lyrics.append(lyric)\n",
-    "    all_ids.append(t+'+'+s)\n",
-    "    all_lyrics.append(lyrics)\n",
-    "    time.sleep(10)"
+    "    for t, s in zip(title, singer):\n",
+    "        lyrics=[]\n",
+    "        browser.get(f\"https://www.google.com/search?q={t}+{s}+lyrics&sourceid=chrome&ie=UTF-8\")\n",
+    "        ids = browser.find_elements_by_class_name(\"i4J0ge\")\n",
+    "        lyric = [x.text for x in ids]\n",
+    "        lyrics.append(lyric)\n",
+    "        all_ids.append(t+'+'+s)\n",
+    "        all_lyrics.append(lyrics)\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "    all_lyrics=pd.DataFrame(all_lyrics).reset_index(drop=True)\n",
+    "    all_ids=pd.DataFrame(all_ids).reset_index(drop=True)\n",
+    "    all_lyrics_df=all_lyrics.merge(all_ids, left_index=True, right_index=True)\n",
+    "    all_lyrics_df.to_csv(f'{j}.csv')"
    ]
   },
   {
@@ -182,36 +215,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "all_lyrics=pd.DataFrame(all_lyrics).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_ids=pd.DataFrame(all_ids).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_lyrics=all_lyrics.merge(all_ids, left_index=True, right_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#all_lyrics.to_csv('lyrics_firstattempt.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
